[package]
name = "libtxc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]
doctest = false

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
winapi = {version = "0.3.9", features = ["errhandlingapi", "libloaderapi"]}
slog = "2.4.1"
slog-stdlog = "4.1.1"

[profile.release]
lto = "thin"

[features]
unchecked = []
default = []
