[package]
name = "libtxc"
version = "0.2.0"
description = "Transaq XML Connector API для Rust"
rust-version = "1.59"
edition = "2021"
license = "MIT or Apache-2.0"
repository = "https://github.com/2dav/libtxc"
documentation = "https://docs.rs/libtxc/"
readme = "README.md"
keywords = ["Transaq XML Connector", "algo-trading", "FINAM"]
categories = ["api-bindings", "finance"]

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug"]}
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.16"
tracing-tracy = {version = "0.10.2", features = ["only-localhost"]}

[features]
default = ["catch_unwind", "safe_buffers"]
catch_unwind = []
safe_buffers = []

[profile.release]
lto = true
codegen-units = 1
incremental = false
