[package]
name = "libtxc"
version = "0.2.4"
description = "Transaq XML Connector API для Rust"
rust-version = "1.59"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/2dav/libtxc"
documentation = "https://docs.rs/libtxc/"
readme = "README.md"
keywords = ["transaq-connector", "algo-trading"]
categories = ["api-bindings", "finance"]
exclude = ["/examples"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug"]}
tracing = {version = "0.1.37", optional = true}

[dev-dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-tracy = {version = "0.10.2", features = ["only-localhost"]}

[features]
default = ["catch_unwind", "safe_buffers"]
catch_unwind = []
safe_buffers = []
tracing = ["dep:tracing"]

[profile.release]
lto = true
codegen-units = 1
incremental = false
